--- a/src/Calculator/Calculator.css
+++ b/src/Calculator/Calculator.css
@@ -116,3 +116,15 @@
 	font-size: 1.25em;
 	text-align: center;
 }
+
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+	-webkit-appearance: none;
+	margin: 0;
+}
+
+/* Firefox */
+input[type="number"] {
+	-moz-appearance: textfield;
+}
